fixed bug w images

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <section id="illustrations">
         <div class="row"> 
             <div class="illustration-gallery">
-              <img src="/img/badbeat2.png" >
-              <img src="/img/ozonetee.png">
-              <img src="/img/rwgirl.png">
-              <img src="/img/silktail_final.png">
+              <img src="./img/badbeat2.png" >
+              <img src="./img/ozonetee.png">
+              <img src="./img/rwgirl.png">
+              <img src="./img/silktail_final.png">
             </div>
             
           </div>
