updated video gallery

--- a/index.html
+++ b/index.html
@@ -36,11 +36,22 @@
         </div>
     </section>
     <section id="graphics">
-        <iframe src="https://player.vimeo.com/video/949659153?h=1a1f395dac" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-        <iframe src="https://player.vimeo.com/video/949659293?h=94c953f23b" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-        <iframe src="https://player.vimeo.com/video/949659620?h=072294c304" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-        <iframe src="https://player.vimeo.com/video/949659463?h=84d93cae40" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-        <iframe src="https://player.vimeo.com/video/949662388?h=2f905913cc" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <div>
+            <iframe src="https://player.vimeo.com/video/949659153?h=1a1f395dac" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+        </div>
+        <div>
+            <iframe src="https://player.vimeo.com/video/949659293?h=94c953f23b" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        </div>
+        <div>
+            <iframe src="https://player.vimeo.com/video/949659620?h=072294c304" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        </div>
+        <div>
+            <iframe src="https://player.vimeo.com/video/949659463?h=84d93cae40" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        </div>
+        <div>
+            <iframe src="https://player.vimeo.com/video/949662388?h=2f905913cc" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        </div>
         </div>
     </section>
 
