fav icon updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="styles.css" rel="stylesheet">
     <script src="app.js" defer></script>
     <title>Reality World</title>
+    <link rel="icon" type="image/x-icon" href="/img/rwgirl.png">
+
 </head>
 <body>
     <nav>
